Move some sections of Enroll Databases
We are organizing the docs so that top-level sections correspond to
Teleport products. Move some sections of the Enroll Databases section
into Zero Trust Access, since this functionality belongs to the ZTA
product.

--- a/docs/pages/enroll-resources/database-access/auto-user-provisioning/mariadb.mdx
+++ b/docs/pages/enroll-resources/database-access/auto-user-provisioning/mariadb.mdx
@@ -12,7 +12,7 @@ labels:
 ## Prerequisites
 
 - Teleport cluster with a configured [self-hosted
-  MariaDB](../enroll-self-hosted-databases/mysql-self-hosted.mdx) or [RDS MariaDB](../enroll-aws-databases/rds.mdx)
+  MariaDB](../../../zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/mysql-self-hosted.mdx) or [RDS MariaDB](../enroll-aws-databases/rds.mdx)
   database.
 - Ability to connect to and create user accounts in the target database.
 
