--- a/docs/pages/zero-trust-access/enroll-resources/auto-discovery/databases/databases.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/auto-discovery/databases/databases.mdx
@@ -12,7 +12,7 @@ them with your Teleport cluster.
 ## Supported clouds
 
 - [AWS](aws.mdx): Discovery for AWS databases.
-- [Azure](../../../../enroll-resources/database-access/enroll-azure-databases/enroll-azure-databases.mdx): Discovery for Azure databases.
+- [Azure](../../database-access/enroll-azure-databases/enroll-azure-databases.mdx): Discovery for Azure databases.
 {/* TODO(gavin): Add an Azure discovery guide and permission reference */}
 
 ## Architecture overview
