--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-managed-databases/oracle-exadata.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-managed-databases/oracle-exadata.mdx
@@ -15,10 +15,10 @@ labels:
 
 <Tabs>
 <TabItem scope={["enterprise"]} label="Teleport Enterprise (Self-Hosted)">
-![Enroll Oracle with a self-hosted Teleport cluster](../../../../img/database-access/guides/oracle_selfhosted.png)
+![Enroll Oracle with a self-hosted Teleport cluster](../../../../../img/database-access/guides/oracle_selfhosted.png)
 </TabItem>
 <TabItem scope={["cloud"]} label="Teleport Enterprise (Cloud)">
-![Enroll Oracle with a cloud-hosted Teleport cluster](../../../../img/database-access/guides/oracle_selfhosted_cloud.png)
+![Enroll Oracle with a cloud-hosted Teleport cluster](../../../../../img/database-access/guides/oracle_selfhosted_cloud.png)
 </TabItem>
 </Tabs>
 
