--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-managed-databases/snowflake.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-managed-databases/snowflake.mdx
@@ -19,10 +19,10 @@ forwards the user's requests to Snowflake as Teleport-authenticated messages.
 
 <Tabs>
 <TabItem scope={["oss", "enterprise"]} label="Self-Hosted">
-  ![Enroll Snowflake with a self-hosted Teleport cluster](../../../../img/database-access/guides/snowflake_selfhosted.png)
+  ![Enroll Snowflake with a self-hosted Teleport cluster](../../../../../img/database-access/guides/snowflake_selfhosted.png)
 </TabItem>
 <TabItem scope={["cloud"]} label="Teleport Enterprise Cloud">
-  ![Enroll Snowflake with a cloud-hosted Teleport cluster](../../../../img/database-access/guides/snowflake_cloud.png)
+  ![Enroll Snowflake with a cloud-hosted Teleport cluster](../../../../../img/database-access/guides/snowflake_cloud.png)
 </TabItem>
 
 </Tabs>
@@ -37,7 +37,7 @@ forwards the user's requests to Snowflake as Teleport-authenticated messages.
 
 - A host where you will run the Teleport Database Service.
 
-  See [Installation](../../../installation/installation.mdx) for details.
+  See [Installation](../../../../installation/installation.mdx) for details.
 
 - (!docs/pages/includes/tctl.mdx!)
 
