--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/clickhouse-self-hosted.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/clickhouse-self-hosted.mdx
@@ -31,10 +31,10 @@ include audit logs for database query activity.
 
 <Tabs>
 <TabItem label="Self-Hosted">
-![Enroll ClickHouse with a self-hosted Teleport cluster](../../../../img/database-access/guides/clickhouse_selfhosted_selfhosted.png)
+![Enroll ClickHouse with a self-hosted Teleport cluster](../../../../../img/database-access/guides/clickhouse_selfhosted_selfhosted.png)
 </TabItem>
 <TabItem label="Teleport Cloud">
-![Enroll ClickHouse with a cloud-hosted Teleport cluster](../../../../img/database-access/guides/clickhouse_selfhosted_cloud.png)
+![Enroll ClickHouse with a cloud-hosted Teleport cluster](../../../../../img/database-access/guides/clickhouse_selfhosted_cloud.png)
 </TabItem>
 </Tabs>
 
