--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/mysql-self-hosted.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/mysql-self-hosted.mdx
@@ -15,10 +15,10 @@ labels:
 
 <Tabs>
 <TabItem scope={["oss", "enterprise"]} label="Self-Hosted">
-![Enroll MySQL with a Self-Hosted Teleport Cluster](../../../../img/database-access/guides/mysql_selfhosted.png)
+![Enroll MySQL with a Self-Hosted Teleport Cluster](../../../../../img/database-access/guides/mysql_selfhosted.png)
 </TabItem>
 <TabItem scope={["cloud"]} label="Teleport Enterprise Cloud">
-![Enroll MySQL with a Cloud-Hosted Teleport Cluster](../../../../img/database-access/guides/mysql_cloud.png)
+![Enroll MySQL with a Cloud-Hosted Teleport Cluster](../../../../../img/database-access/guides/mysql_cloud.png)
 </TabItem>
 
 </Tabs>
@@ -184,7 +184,7 @@ $ tsh db ls
 </Tabs>
 
 Note that you will only be able to see databases your role has access to. See
-the [RBAC](../rbac.mdx) guide for more details.
+the [RBAC](../../../../enroll-resources/database-access/rbac.mdx) guide for more details.
 
 To retrieve credentials for a database and connect to it:
 
