--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/postgres-self-hosted.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/postgres-self-hosted.mdx
@@ -15,10 +15,10 @@ labels:
 
 <Tabs>
 <TabItem scope={["oss", "enterprise"]} label="Self-Hosted">
-![Enroll PostgreSQL with a Self-Hosted Teleport Cluster](../../../../img/database-access/guides/postgresqlselfhosted_selfhosted.png)
+![Enroll PostgreSQL with a Self-Hosted Teleport Cluster](../../../../../img/database-access/guides/postgresqlselfhosted_selfhosted.png)
 </TabItem>
 <TabItem scope={["cloud"]} label="Teleport Enterprise Cloud">
-![Enroll PostgreSQL with a Cloud-Hosted Teleport Cluster](../../../../img/database-access/guides/postgresqlselfhosted_cloud.png)
+![Enroll PostgreSQL with a Cloud-Hosted Teleport Cluster](../../../../../img/database-access/guides/postgresqlselfhosted_cloud.png)
 </TabItem>
 
 </Tabs>
@@ -138,7 +138,7 @@ $ tsh db ls
 </Tabs>
 
 Note that you will only be able to see databases your role has access to. See
-[RBAC](../rbac.mdx) section for more details.
+[RBAC](../../../../enroll-resources/database-access/rbac.mdx) section for more details.
 
 To retrieve credentials for a database and connect to it:
 
@@ -165,6 +165,6 @@ $ tsh db logout
 
 ## Next steps
 
-- Set up [automatic database user provisioning](../auto-user-provisioning/postgres.mdx).
+- Set up [automatic database user provisioning](../../../../enroll-resources/database-access/auto-user-provisioning/postgres.mdx).
 
 (!docs/pages/includes/database-access/guides-next-steps.mdx!)
