--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/redis.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/redis.mdx
@@ -19,10 +19,10 @@ If you want to configure Redis Cluster, please read [Database Access with Redis 
 
 <Tabs>
 <TabItem scope={["oss", "enterprise"]} label="Self-Hosted">
-![Enroll Redis with a Self-Hosted Teleport Cluster](../../../../img/database-access/guides/redis_selfhosted.png)
+![Enroll Redis with a Self-Hosted Teleport Cluster](../../../../../img/database-access/guides/redis_selfhosted.png)
 </TabItem>
 <TabItem scope={["cloud","team"]} label="Teleport Cloud">
-![Enroll Redis with a Cloud-Hosted Teleport Cluster](../../../../img/database-access/guides/redis_cloud.png)
+![Enroll Redis with a Cloud-Hosted Teleport Cluster](../../../../../img/database-access/guides/redis_cloud.png)
 </TabItem>
 
 </Tabs>
@@ -41,7 +41,7 @@ If you want to configure Redis Cluster, please read [Database Access with Redis 
 
 - A host where you will run the Teleport Database Service.
 
-  See [Installation](../../../installation/installation.mdx) for details.
+  See [Installation](../../../../installation/installation.mdx) for details.
 
 - Optional: a certificate authority that issues certificates for
   your self-hosted database.
