--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/sql-server-ad-pkinit.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/sql-server-ad-pkinit.mdx
@@ -21,10 +21,10 @@ Teleport Database Service forwards user traffic to the database.
 
 <Tabs>
 <TabItem scope={["oss", "enterprise"]} label="Self-Hosted">
-![Database access with SQL Server and AD authentication](../../../../img/database-access/sql-server-ad-1.png)
+![Database access with SQL Server and AD authentication](../../../../../img/database-access/sql-server-ad-1.png)
 </TabItem>
 <TabItem scope={["cloud"]} label="Teleport Enterprise Cloud">
-![Database access with SQL Server and AD authentication](../../../../img/database-access/sql-server-ad-2.png)
+![Database access with SQL Server and AD authentication](../../../../../img/database-access/sql-server-ad-2.png)
 </TabItem>
 </Tabs>
 
@@ -130,7 +130,7 @@ You will need to repeat these steps if you rotate Teleport's database certificat
 
 1. Click through the wizard, selecting your CA file (`db-ca.cer`).
 
-  ![Import Teleport CA](../../../../img/desktop-access/ca.png)
+  ![Import Teleport CA](../../../../../img/desktop-access/ca.png)
 
 ### Enable smart card service
 
@@ -145,7 +145,7 @@ Teleport performs certificate-based authentication by emulating a smart card.
 1. Double click on `Smart Card`, select `Define this policy setting` and switch
    to `Automatic` then click `OK`.
 
-  ![Enable Smartcard](../../../../img/desktop-access/smartcard.png)
+  ![Enable Smartcard](../../../../../img/desktop-access/smartcard.png)
 
 <Admonition type="note" title="gpupdate.exe">
   You will be modifying GPOs, and sometimes GPO modifications can take some time
