--- a/docs/pages/enroll-resources/database-access/auto-user-provisioning/mongodb.mdx
+++ b/docs/pages/enroll-resources/database-access/auto-user-provisioning/mongodb.mdx
@@ -13,7 +13,7 @@ labels:
 
 - A Teleport cluster.
 - A self-hosted MongoDB database enrolled with your Teleport cluster. Follow
-  the [Teleport documentation](../enroll-self-hosted-databases/mongodb-self-hosted.mdx) to learn how
+  the [Teleport documentation](../../../zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/mongodb-self-hosted.mdx) to learn how
   to enroll your database.
   Your MongoDB database must have Role-Based Access Control (RBAC) enabled by
   setting
