--- a/docs/pages/enroll-resources/database-access/auto-user-provisioning/mysql.mdx
+++ b/docs/pages/enroll-resources/database-access/auto-user-provisioning/mysql.mdx
@@ -33,7 +33,7 @@ stripping its privileges.
 ## Prerequisites
 
 - Teleport cluster with a configured [self-hosted
-  MySQL](../enroll-self-hosted-databases/mysql-self-hosted.mdx) or [RDS MySQL](../enroll-aws-databases/rds.mdx)
+  MySQL](../../../zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/mysql-self-hosted.mdx) or [RDS MySQL](../enroll-aws-databases/rds.mdx)
   database.
 - Ability to connect to and create user accounts in the target database.
 - Automatic user provisioning is not compatible with MySQL versions lower than
