--- a/docs/pages/enroll-resources/database-access/troubleshooting.mdx
+++ b/docs/pages/enroll-resources/database-access/troubleshooting.mdx
@@ -44,12 +44,12 @@ Service can reach the PostgreSQL server.
 Each database uses a different format. You can check your database guide for more
 details and examples:
 
-- [PostgreSQL](./enroll-self-hosted-databases/postgres-self-hosted.mdx#step-25-create-a-certificatekey-pair)
-- [MySQL/MariaDB](./enroll-self-hosted-databases/mysql-self-hosted.mdx#step-24-create-a-certificatekey-pair)
-- [MongoDB](./enroll-self-hosted-databases/mongodb-self-hosted.mdx#set-up-mutual-tls)
-- [CockroachDB](./enroll-self-hosted-databases/cockroachdb-self-hosted.mdx#set-up-mutual-tls)
-- [Redis](./enroll-self-hosted-databases/redis.mdx#step-45-set-up-mutual-tls)
-- [Redis Cluster](./enroll-self-hosted-databases/redis-cluster.mdx#step-46-set-up-mutual-tls)
+- [PostgreSQL](../../zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/postgres-self-hosted.mdx#step-25-create-a-certificatekey-pair)
+- [MySQL/MariaDB](../../zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/mysql-self-hosted.mdx#step-24-create-a-certificatekey-pair)
+- [MongoDB](../../zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/mongodb-self-hosted.mdx#set-up-mutual-tls)
+- [CockroachDB](../../zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/cockroachdb-self-hosted.mdx#set-up-mutual-tls)
+- [Redis](../../zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/redis.mdx#step-45-set-up-mutual-tls)
+- [Redis Cluster](../../zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/redis-cluster.mdx#step-46-set-up-mutual-tls)
 
 After the new certificate is issued, update your database to make it take effect.
 
