--- a/docs/pages/zero-trust-access/enroll-resources/database-access/database-access.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/database-access.mdx
@@ -13,20 +13,20 @@ Some of the things you can do with database access:
 - Enable users to retrieve short-lived database certificates using a Single Sign-On
   flow, thus maintaining their organization-wide identity.
 - Configure role-based access controls for databases and implement custom
-  [Access Request](../../identity-governance/access-requests/access-requests.mdx) workflows.
+  [Access Request](../../../identity-governance/access-requests/access-requests.mdx) workflows.
 - Capture database activity in the Teleport audit log.
 
 Teleport protects databases through the Teleport Database Service, which is a
 Teleport Agent service. For more information on agent services, read [Teleport
-Agent Architecture](../../reference/architecture/agents.mdx). You can also learn how to
-deploy a [pool of Teleport Agents](../../zero-trust-access/enroll-resources/agents/agents.mdx) to run multiple
+Agent Architecture](../../../reference/architecture/agents.mdx). You can also learn how to
+deploy a [pool of Teleport Agents](../../enroll-resources/agents/agents.mdx) to run multiple
 agent services.
 
-![Architecture diagram for enrolling databases with Teleport](../../../img/database-access/architecture.svg)
+![Architecture diagram for enrolling databases with Teleport](../../../../img/database-access/architecture.svg)
 
 ## Getting started
 
-- [Getting Started Guide](../../zero-trust-access/enroll-resources/database-access/getting-started.mdx): Getting started with Teleport database access and AWS Aurora PostgreSQL.
+- [Getting Started Guide](./getting-started.mdx): Getting started with Teleport database access and AWS Aurora PostgreSQL.
 
 ## Guides
 
@@ -39,10 +39,10 @@ agent services.
 
 ## Configuration & management
 
-- [Access Controls](./rbac.mdx): Role-based access control (RBAC) for Teleport database access.
+- [Access Controls](../../../enroll-resources/database-access/rbac.mdx): Role-based access control (RBAC) for Teleport database access.
 - [Using the Teleport Database Service (section)](./guides/): Guides to possibilities for running the Teleport Database Service.
 
 ## Troubleshooting & support
 
-- [FAQ](./faq.mdx): Frequently asked questions about Teleport database access.
-- [Troubleshooting](./troubleshooting.mdx): Common issues and resolutions for Teleport's Database Access
+- [FAQ](../../../enroll-resources/database-access/faq.mdx): Frequently asked questions about Teleport database access.
+- [Troubleshooting](../../../enroll-resources/database-access/troubleshooting.mdx): Common issues and resolutions for Teleport's Database Access
