--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-google-cloud-databases/postgres-cloudsql.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-google-cloud-databases/postgres-cloudsql.mdx
@@ -16,10 +16,10 @@ labels:
 
 <Tabs>
 <TabItem label="Self-Hosted">
-![Self-Hosted Teleport Architecture for Cloud SQL Access](../../../../img/database-access/guides/cloudsql_selfhosted.png)
+![Self-Hosted Teleport Architecture for Cloud SQL Access](../../../../../img/database-access/guides/cloudsql_selfhosted.png)
 </TabItem>
 <TabItem label="Cloud-Hosted">
-![Cloud-Hosted Teleport Architecture for Cloud SQL Access](../../../../img/database-access/guides/cloudsql_cloud.png)
+![Cloud-Hosted Teleport Architecture for Cloud SQL Access](../../../../../img/database-access/guides/cloudsql_cloud.png)
 </TabItem>
 </Tabs>
 
@@ -65,11 +65,11 @@ account. In the sidebar, choose "Cloud IAM" authentication type and add the
 "cloudsql-user" service account that you created in
 [the second step](#step-29-create-a-service-account-for-a-database-user):
 
-![Add Cloud SQL User Account](../../../../img/database-access/guides/cloudsql/add-user-account@2x.png)
+![Add Cloud SQL User Account](../../../../../img/database-access/guides/cloudsql/add-user-account@2x.png)
 
 Press "Add" and your Users table should look similar to this:
 
-![Cloud SQL User Accounts Table](../../../../img/database-access/guides/cloudsql/user-accounts@2x.png)
+![Cloud SQL User Accounts Table](../../../../../img/database-access/guides/cloudsql/user-accounts@2x.png)
 
 See [Creating and managing IAM users](https://cloud.google.com/sql/docs/postgres/create-manage-iam-users)
 in Google Cloud documentation for more info.
@@ -139,7 +139,7 @@ $ tsh db ls
   type="note"
 >
 You will only be able to see databases that your Teleport role has
-access to. See our [RBAC](../rbac.mdx) guide for more details.
+access to. See our [RBAC](../../../../enroll-resources/database-access/rbac.mdx) guide for more details.
 </Admonition>
 
 When connecting to the database, use the name of the database's service account
