--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/cockroachdb-self-hosted.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/cockroachdb-self-hosted.mdx
@@ -15,10 +15,10 @@ labels:
 
 <Tabs>
 <TabItem scope={["oss", "enterprise"]} label="Self-Hosted">
-![Enrolling a CockroachDB instance with a self-hosted Teleport cluster](../../../../img/database-access/guides/cockroachdb_selfhosted.png)
+![Enrolling a CockroachDB instance with a self-hosted Teleport cluster](../../../../../img/database-access/guides/cockroachdb_selfhosted.png)
 </TabItem>
 <TabItem scope={["cloud"]} label="Teleport Enterprise Cloud">
-![Enrolling a CockroachDB instance with a cloud-hosted Teleport cluster](../../../../img/database-access/guides/cockroachdb_cloud.png)
+![Enrolling a CockroachDB instance with a cloud-hosted Teleport cluster](../../../../../img/database-access/guides/cockroachdb_cloud.png)
 </TabItem>
 
 </Tabs>
