--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/redis-cluster.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/redis-cluster.mdx
@@ -19,10 +19,10 @@ If you want to configure Redis Standalone, please read [Database Access with Red
 
 <Tabs>
 <TabItem scope={["oss", "enterprise"]} label="Self-Hosted">
-![Enroll Redis Cluster with a Self-Hosted Teleport Cluster](../../../../img/database-access/guides/rediscluster_selfhosted.png)
+![Enroll Redis Cluster with a Self-Hosted Teleport Cluster](../../../../../img/database-access/guides/rediscluster_selfhosted.png)
 </TabItem>
 <TabItem scope={["cloud","team"]} label="Teleport Cloud">
-![Enroll Redis Cluster with a Cloud-Hosted Teleport Cluster](../../../../img/database-access/guides/rediscluster_cloud.png)
+![Enroll Redis Cluster with a Cloud-Hosted Teleport Cluster](../../../../../img/database-access/guides/rediscluster_cloud.png)
 </TabItem>
 
 </Tabs>
