--- a/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/vitess.mdx
+++ b/docs/pages/zero-trust-access/enroll-resources/database-access/enroll-self-hosted-databases/vitess.mdx
@@ -15,10 +15,10 @@ labels:
 
 <Tabs>
 <TabItem scope={["oss", "enterprise"]} label="Self-Hosted">
-![Enroll Vitess with a self-hosted Teleport cluster](../../../../img/database-access/guides/vitess_selfhosted.png)
+![Enroll Vitess with a self-hosted Teleport cluster](../../../../../img/database-access/guides/vitess_selfhosted.png)
 </TabItem>
 <TabItem scope={["cloud"]} label="Teleport Enterprise Cloud">
-![Enroll Vitess with a cloud-hosted Teleport cluster](../../../../img/database-access/guides/vitess_cloud.png)
+![Enroll Vitess with a cloud-hosted Teleport cluster](../../../../../img/database-access/guides/vitess_cloud.png)
 </TabItem>
 
 </Tabs>
@@ -188,7 +188,7 @@ $ tsh db ls
 </Tabs>
 
 Note that you will only be able to see databases your role has access to. See
-the [RBAC](../rbac.mdx) guide for more details.
+the [RBAC](../../../../enroll-resources/database-access/rbac.mdx) guide for more details.
 
 To retrieve credentials for a database and connect to it:
 
